Bug 477335 - "xesam:url" is not decoded
Summary: "xesam:url" is not decoded
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Media Player widget (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-11-21 16:34 UTC by Fushan Wen
Modified: 2023-11-21 18:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2023-11-21 16:34:29 UTC
For example, %20 should be a space character.
Comment 1 Bug Janitor Service 2023-11-21 17:48:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3581
Comment 2 Fushan Wen 2023-11-21 18:01:05 UTC
Git commit ab2a90aa0e4966e69355b812b04a8e06e0462004 by Fushan Wen.
Committed on 21/11/2023 at 19:01.
Pushed by fusionfuture into branch 'master'.

libkmpris: decode "xesam:url" when using folder name as album name
FIXED-IN: 6.0

M  +14   -0    appiumtests/mediacontrollertest.py
A  +43   -0    appiumtests/resources/player_with_encoded_url.json
M  +2    -1    appiumtests/utils/mediaplayer.py
M  +5    -5    libkmpris/playercontainer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/ab2a90aa0e4966e69355b812b04a8e06e0462004