libkmpris: decode "xesam:url" when using folder name as album name

BUG: 477335
FIXED-IN: 6.0