appiumtests/utils/mediaplayer.py
@@ -33,10 +33,11 @@ def read_player_metadata(json_dict: dict[str, Any]) -> list[dict[str, GLib.Varia
             "xesam:url": GLib.Variant('s', "file://" + path.join(getcwd(), song["xesam:url"])),
             "mpris:length": GLib.Variant('x', int(song["mpris:length"])),  # ms
             "xesam:title": GLib.Variant('s', song["xesam:title"]),
-            "xesam:album": GLib.Variant('s', song["xesam:album"]),
             "xesam:artist": GLib.Variant('as', song["xesam:artist"]),
             "mpris:artUrl": GLib.Variant('s', "")
         }
+        if "xesam:album" in song.keys():
+            song_dict["xesam:album"] = GLib.Variant('s', song["xesam:album"])
         if "mpris:artUrl" in song.keys():
             song_dict["mpris:artUrl"] = GLib.Variant('s', "file://" + path.join(getcwd(), song["mpris:artUrl"]))
         if "kde:pid" in song.keys():
